Fix leaderboard overflow scroll

--- a/frontend/public/stylesheets/leaderboard.css
+++ b/frontend/public/stylesheets/leaderboard.css
@@ -5,6 +5,7 @@
     background: white;
     margin: 10px;
     right: 0;
+    max-height: 80vh;
 }
 
 h5 {
